# megaDSP

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: build.yml
docs/: effects.md
src/: DspModules.h  EffectRack.cpp  EffectRack.h  Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  VisualizationData.h
src/modules/: AdaptiveClipper.cpp  AdaptiveClipper.h  AlgorithmicReverb.cpp  AlgorithmicReverb.h  AnalogTape.cpp  AnalogTape.h  BeatPermuter.cpp  BeatPermuter.h  ChaosField.cpp  ChaosField.h  Compressor.cpp  Compressor.h  ConvolutionReverb.cpp  ConvolutionReverb.h  Delay.cpp  Delay.h  DiffusionDelay.cpp  DiffusionDelay.h  DspHelpers.cpp  DspHelpers.h  DspModule.h  DspSafety.h  DynamicEqualizer.cpp  DynamicEqualizer.h  Equalizer.cpp  Equalizer.h  FormantForge.cpp  FormantForge.h  FrequencyLab.cpp  FrequencyLab.h  GateExpander.cpp  GateExpander.h  HarmonicMirage.cpp  HarmonicMirage.h  Limiter.cpp  Limiter.h  LoudnessRider.cpp  LoudnessRider.h  MidSideDecoder.cpp  MidSideDecoder.h  (+47 more)
src/ui/: EffectGraph.cpp  EffectGraph.h  GraphStyle.h  GuiLayout.cpp  GuiLayout.h  ModuleBrowser.cpp  ModuleBrowser.h  ModuleView.cpp  ModuleView.h  ModuleViewFactory.cpp  ModuleViewFactory.h
src/ui/modules/: AdaptiveClipperModuleView.cpp  AlgorithmicReverbModuleView.cpp  AnalogTapeModuleView.cpp  BeatPermuterModuleView.cpp  ChaosFieldModuleView.cpp  CompressorModuleView.cpp  ConvolutionReverbModuleView.cpp  DelayModuleView.cpp  DiffusionDelayModuleView.cpp  DynamicEqualizerModuleView.cpp  EqualizerModuleView.cpp  FormantForgeModuleView.cpp  FrequencyLabModuleView.cpp  GateExpanderModuleView.cpp  HarmonicMirageModuleView.cpp  LimiterModuleView.cpp  LoudnessRiderModuleView.cpp  MidSideDecoderModuleView.cpp  ModuleViewCreators.h  MultibandCompressorModuleView.cpp  PhaseCoherenceModuleView.cpp  PitchBloomModuleView.cpp  RandomGranulizerModuleView.cpp  ResonanceTamerModuleView.cpp  ResonantMatrixModuleView.cpp  RotarySpeakerModuleView.cpp  SaturatorModuleView.cpp  SignalDecayModuleView.cpp  SpatialOrbitModuleView.cpp  SpectralBalanceModuleView.cpp  SpectralDelayCanvasModuleView.cpp  SpectralPrismModuleView.cpp  StereoWidthModuleView.cpp  StudioFlangerModuleView.cpp  StudioPhaserModuleView.cpp  TimeMosaicModuleView.cpp  TransientDesignerModuleView.cpp  TremoloModuleView.cpp  VintageChorusModuleView.cpp  WavefoldGardenModuleView.cpp
tests/: DspModuleTests.cpp  DynamicsTelemetryTests.cpp  GuiLayoutTests.cpp  ModuleBrowserTests.cpp  NextTenUtilityTests.cpp  ProcessorTests.cpp  SpectralAdaptiveModulesTests.cpp  SpectralHistoryPairTests.cpp  TelemetryFoundationTests.cpp  TestMain.cpp  TimeTelemetryTests.cpp
